--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Moydenskall/Moydenskall.sdf
 Moydenskall/Moydenskall.vcxproj
 Moydenskall/Release/Moydenskall.iobj
 Moydenskall/Release/Moydenskall.ipdb
+Moydenskall/Moydenskall.opensdf
