remove Visual Studio log files

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Moydenskall/Moydenskall.vcxproj
 Moydenskall/Release/Moydenskall.iobj
 Moydenskall/Release/Moydenskall.ipdb
 Moydenskall/Moydenskall.opensdf
+Moydenskall/Moydenskall.vcxproj.filters
