make "Seeder" an individual class

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ Moydenskall/Release/Moydenskall.iobj
 Moydenskall/Release/Moydenskall.ipdb
 Moydenskall/Moydenskall.opensdf
 Moydenskall/Moydenskall.vcxproj.filters
+*.svg
+Moydenskall/Debug/Moydenskall.bsc
