remove IDE files

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Moydenskall/Moydenskall.opensdf
 Moydenskall/Moydenskall.sdf
 Moydenskall/Debug/Moydenskall.bsc
 Moydenskall/Debug/vc140.idb
+Moydenskall/moydenskall
+Moydenskall/.vscode/*
